--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=CARS
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.hibernate.ddl-auto=create
-spring.datasource.username=sa
-spring.datasource.password=p@ssw0rd
-spring.datasource.sql-script-encoding=UTF-8
+logging.charset.file=UTF-8
+logging.file.name=logs/grepCarInfo.log
