--- a/src/main/resources/application-mariadb.properties
+++ b/src/main/resources/application-mariadb.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/car
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create
-spring.datasource.username=sa
-spring.datasource.password=p@ssw0rd
+spring.datasource.username=root
+spring.datasource.password=P@ssw0rd2021
 
 spring.datasource.sql-script-encoding=UTF-8
 
