--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8088
 logging.charset.file=UTF-8
 logging.file.name=logs/grepCarInfo.log
+spring.datasource.sql-script-encoding=UTF-8
+
+spring.jpa.hibernate.ddl-auto=update
