[Scrape] Implement consumer and producer for scrape car info

--- a/car-gateway/src/main/resources/application.yaml
+++ b/car-gateway/src/main/resources/application.yaml
@@ -22,7 +22,7 @@ management:
 eureka:
   instance:
     prefer-ip-address: true
-    instance-id: car-gateway-${random.value}
+    instance-id: car-gateway-${spring.cloud.client.ip-address}:${server.port}
   client:
     service-url:
       defaultZone: http://localhost:8011/eureka
