[Scrape] Implement carInfo service get all cars endpoint

--- a/car-info-service/src/main/resources/application.yml
+++ b/car-info-service/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 carinfo:
+  schedule:
+    scrape-car:
+#      fixedDelay: 99999999
+      fixedDelay: 300000
   kafka:
     producer:
       topic: scrape-events
