--- a/car-info-ui/car-app/package.json
+++ b/car-info-ui/car-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@react-spring/parallax": "^9.5.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
