--- a/car-info-ui/car-app/package.json
+++ b/car-info-ui/car-app/package.json
@@ -7,6 +7,7 @@
     "@heroicons/react": "^1.0.6",
     "@react-spring/parallax": "^9.5.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
