--- a/car-info-ui/car-app/package.json
+++ b/car-info-ui/car-app/package.json
@@ -16,11 +16,13 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
+    "firebase": "^9.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.3",
     "recharts": "^2.1.12",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
