--- a/car-gateway/src/main/resources/application.yaml
+++ b/car-gateway/src/main/resources/application.yaml
@@ -7,6 +7,18 @@ spring:
     import: optional:configserver:http://localhost:8010
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedHeaders: "*"
+      #            allowedMethods:
+      #              - GET
+      #              - POST
+      #              - OPTIONS
+      #        add-to-simple-url-handler-mapping: true
+      #      default-filters:
+      #        - DedupeResponseHeader=Vary Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_FIRST
       discovery:
         locator:
           enabled: true
@@ -26,3 +38,19 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8011/eureka
+
+firebase:
+  initial:
+    type: "service_account"
+    project_id: "microservices-ui"
+    private_key_id:
+    private_key:
+    client_email: "firebase-adminsdk-6smt0@microservices-ui.iam.gserviceaccount.com"
+    client_id:
+    auth_uri: "https://accounts.google.com/o/oauth2/auth"
+    token_uri: "https://oauth2.googleapis.com/token"
+    auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs"
+    client_x509_cert_url: "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-6smt0%40microservices-ui.iam.gserviceaccount.com"
+
+
+
