--- a/car-info-ui/car-app/package.json
+++ b/car-info-ui/car-app/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.3",
+    "react-spring": "^9.5.0",
     "recharts": "^2.1.12",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
