--- a/car-info-ui/car-app/package.json
+++ b/car-info-ui/car-app/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.24",
     "firebase": "^9.9.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
