[Prometheus] Add dependencies and config and annotation in code

--- a/car-info-service/src/main/resources/application.yml
+++ b/car-info-service/src/main/resources/application.yml
@@ -39,6 +39,11 @@ spring:
 #      uri: mongodb://localhost:27017
       uri: mongodb+srv://microservices:<password>@cluster0.t6wct.mongodb.net/?retryWrites=true&w=majority
       database: grep-car-info
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
 eureka:
   client:
     service-url:
