--- a/car-config/src/main/resources/application.yaml
+++ b/car-config/src/main/resources/application.yaml
@@ -13,7 +13,19 @@ spring:
           default-label: main
           clone-on-start: true
           password:
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
 encrypt:
   key: gggsxxxeet
 server:
   port: 8010
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
