--- a/car-eureka/src/main/resources/application.yaml
+++ b/car-eureka/src/main/resources/application.yaml
@@ -3,6 +3,11 @@ spring:
     name: car-eureka
   config:
     import: optional:configserver:http://localhost:8010
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
 app:
   instance:
     host: localhost
@@ -16,3 +21,9 @@ eureka:
     prefer-ip-address: true
 server:
   port: 8011
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
