--- a/car-gateway/src/main/resources/application.yaml
+++ b/car-gateway/src/main/resources/application.yaml
@@ -22,6 +22,11 @@ spring:
       discovery:
         locator:
           enabled: true
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
   profiles:
     active: dev
 
