--- a/helm/services/prometheus/Chart.yaml
+++ b/helm/services/prometheus/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: prod
+name: prometheus
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,23 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
-
-dependencies:
-  - name: common
-    version: 0.1.0
-    repository: file://../../common
-  - name: car-config
-    version: 0.1.0
-    repository: file://../../services/car-config
-  - name: car-eureka
-    version: 0.1.0
-    repository: file://../../services/car-eureka
-  - name: car-gateway
-    version: 0.1.0
-    repository: file://../../services/car-gateway
-  - name: car-info-service
-    version: 0.1.0
-    repository: file://../../services/car-info-service
-  - name: web-scraping
-    version: 0.1.0
-    repository: file://../../services/web-scraping
