--- a/helm/common/templates/secret.yaml
+++ b/helm/common/templates/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.global.secretName }}
+  name: {{ .Values.global.secretName }}-{{ .Values.global.activeProfile }}
 type: Opaque
 data:
   FIREBASE_CONFIG_PRIVATEKEYID: {{ .Values.global.firebase.keyId }}
